--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Unpatch the sand duplication glitch from PaperMC",
   "main": "index.js",
   "scripts": {
-    "run": "node ./index.js"
+    "start": "node ./index.js"
   },
   "author": "Mingming Cui",
   "license": "GPLv3",
