--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,13 @@ jobs:
       with:
         node-version: 14.x
         cache: 'npm'
+    
+    - name: Setup JDK 17
+      uses: actions/setup-java@v2.3.1
+      with:
+          java-version: 17
+          cache: 'gradle'
+          distribution: 'temurin'
 
     - name: Check Version and Build
       env:
