--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 14.x
+        cache: npm
     
     - name: Setup JDK 17
       uses: actions/setup-java@v2.3.1
