Trying to fix everything

--- a/package.json
+++ b/package.json
@@ -8,5 +8,7 @@
   },
   "author": "Mingming Cui",
   "license": "GPL-3.0-or-later",
-  "dependencies": {}
+  "dependencies": {
+    "shelljs.exec": "^1.1.8"
+  }
 }
