--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,6 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 14.x
-        cache: npm
     
     - name: Setup JDK 17
       uses: actions/setup-java@v2.3.1
@@ -27,7 +26,9 @@ jobs:
     - name: Check Version and Build
       env:
         GH_REPO: ${{ github.repository }}
-      run: npm start
+      run: |
+        npm install
+        npm start
       
     - name: Load output file to env
       uses: antifree/json-to-variables@v1.0.1
