--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
         filename: output.json
 
     - name: Create Release
-      if: ${{ env.json_Update }}
+      if: ${{ env.json_Update == true }}
       uses: ncipollo/release-action@v1
       with:
         artifacts: ${{ env.json_FileName }}
