--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,7 @@ jobs:
     - name: Configure git credentials
       uses: OleksiyRudenko/gha-git-credentials@v2
       with:
+        global: true
         token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Check Version and Build
