--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+        submodules: recursive
+      
     - name: Setup Node.js 14
       uses: actions/setup-node@v3
       with:
