--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,7 @@ on:
     branches: [ master ]
     paths-ignore:
       - 'README.md'
+      - 'README_zh.md'
       - 'config.json'
   pull_request:
   workflow_dispatch:
